<resources>
    <string name="app_name">SimpleBoardApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now"><u>Don\'t have an account yet?</u></string>
    <string name="register">Register</string>
    <string name="login_now"><u>Already have an account?</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nickname">Nickname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="id_placeholder">#1</string>
    <string name="title_placeholder">대충 제목입니다.</string>
    <string name="tags_placeholder">#대충 #태그 #입니다.</string>
    <string name="upload_title_placeholder">제목을 입력해주세요.</string>
    <string name="upload_content_placeholder">내용을 입력해주세요.</string>
    <string name="upload_tags_placeholder">태그를 입력해주세요. (공백으로 구분)</string>
    <string name="submit">작성하기</string>
    <string name="comment_placeholder">댓글을 입력해주세요.</string>
    <string name="comment">댓글</string>
    <string name="add_comment">Add Comment</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
</resources>