<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.upload.UploadFragment">

        <TextView
            android:id="@+id/textWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="글 작성하기"
            android:textColor="@color/simple_blue"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="@font/apple_sd_gothic_neo_b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_edit_text"
            android:hint="@string/upload_title_placeholder"
            android:fontFamily="@font/apple_sd_gothic_neo_m"
            android:padding="10dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWrite" />

        <EditText
            android:id="@+id/editContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/round_edit_text"
            android:gravity="top"
            android:hint="@string/upload_content_placeholder"
            android:fontFamily="@font/apple_sd_gothic_neo_m"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTags"
            app:layout_constraintEnd_toEndOf="@+id/editTitle"
            app:layout_constraintStart_toStartOf="@+id/editTitle"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" />

        <EditText
            android:id="@+id/editTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_edit_text"
            android:hint="@string/upload_tags_placeholder"
            android:fontFamily="@font/apple_sd_gothic_neo_m"
            android:padding="10dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/buttonUpload"
            app:layout_constraintEnd_toEndOf="@+id/editContent"
            app:layout_constraintStart_toStartOf="@+id/editContent" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button"
            android:paddingVertical="10dp"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/apple_sd_gothic_neo_b"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTags"
            app:layout_constraintStart_toStartOf="@+id/editTags" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/simple_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>